# vecky

./: README.md  main.py  pyproject.toml  vector2.py  vectorstore.py
