[tool.poetry]
name = "vecky"
version = "0.1.0"
description = "Open-Source Vector Database"
authors = ["Akhil <gurramakhileshwar333@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
torch = "^2.2.2"
pandas = "^2.2.2"
datasets = "^2.19.0"
sentence-transformers = "^2.7.0"
sqlmodel = "^0.0.19"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
